--- a/css/rock-paper-scrissor.css
+++ b/css/rock-paper-scrissor.css
@@ -8,6 +8,12 @@
 }
 
 /* initial view */
+.main-section {
+  display: flex;
+  flex-direction: column;
+  place-content: center;
+  min-height: 100vh;
+}
 .main-game-initial {
   display: none;
 }
